--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "node ./bin/www"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
@@ -13,5 +13,8 @@
     "express": "^4.21.2",
     "http-errors": "~1.6.3",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
